# CDP

./: CMakeLists.txt  README.md
Core/: CMakeLists.txt
Core/include/CDP/Singleton/: Singleton.h
Core/include/CDP/Singleton/details/: Singleton.inl
Core/include/CDP/Visitor/: General_Visitor.h  Visitor.h
Singleton/: CMakeLists.txt
Singleton/include/: Singleton.h
Test/: CMakeLists.txt  test.cpp
Test/include/: test.h
